Use older stream collector